# hawi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/hygge/: Grammar.h  Interpreter.h  Lexeme.h  Lexer.h  List.h  ListNode.h  Parser.h  Token.h
lib/x64/: icudt.lib  icuin.lib  icuio.lib  icutest.lib  icutu.lib
src/hawi/: CMakeLists.txt
src/hygge/: CMakeLists.txt  Grammar.cpp  Interpreter.cpp  Lexeme.cpp  Lexer.cpp  List.cpp  ListNode.cpp  Parser.cpp  Token.cpp
test/hygge/: CMakeLists.txt  TestInterpreter.cpp  TestLexer.cpp  TestList.cpp  TestParser.cpp
